<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/expenses_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:visibility="gone"
        android:id="@+id/empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_expenses"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_expense_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/secondaryColor"
        app:useCompatPadding="true"
        android:layout_gravity="bottom|right"
        android:theme="@style/Theme.MaterialComponents.Light" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expenses_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</FrameLayout>