<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/filters"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="filters"
        android:visible="true"
        app:showAsAction="always" />
</menu>